Localization selection field

--- a/local-addons/odoo_meetings/views/meetings.xml
+++ b/local-addons/odoo_meetings/views/meetings.xml
@@ -25,7 +25,7 @@
                         <page string="Información general">
                             <group>
                                 <field name="name"/>
-                                <field name="localization" widget="selection"/>
+                                <field name="localization"/>
                                 <field name="description" widget="html"/>
                             </group>
                         </page>
