--- a/local-addons/odoo_meetings/views/meetings.xml
+++ b/local-addons/odoo_meetings/views/meetings.xml
@@ -41,7 +41,15 @@
                         <page string="Empleados">
                             <p>Asigna empleados a este tipo de reunión creado:</p>
                             <group>
-                                <field name="employees" widget="many2many"/>
+                                <field name="employees" widget="many2many">
+                                    <tree>
+                                        <field name="name"/>
+                                         <field name="work_phone"/>
+                                        <field name="work_email"/>
+                                        <field name="resource_calendar_id"/>
+                                        <field name="department_id"/>
+                                    </tree>
+                                </field>
                             </group>
                         </page>
                     </notebook>
@@ -99,13 +107,13 @@
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                                     <!-- Edit and Delete actions, if available: -->
                                     <div t-if="widget.editable">
-                                   
+
                                         <li>
                                             <a type="edit">Edit</a>
                                         </li>
                                         <li>
                                             <a type="delete">Delete</a>
-                                        </li>   
+                                        </li>
                                     </div>
                                 </ul>
                             </div>
