--- a/local-addons/odoo_meetings/views/meetings.xml
+++ b/local-addons/odoo_meetings/views/meetings.xml
@@ -26,7 +26,8 @@
                             <group>
                                 <field name="name"/>
                                 <field name="localization"/>
-                                <field name="description" widget="html"/>
+                                <!-- <field name="description" widget="html"/> -->
+                                <field name="description"/>
                             </group>
                         </page>
                         <page string="Fechas, duración y límite">
@@ -44,7 +45,7 @@
                                 <field name="employees" widget="many2many">
                                     <tree>
                                         <field name="name"/>
-                                         <field name="work_phone"/>
+                                        <field name="work_phone"/>
                                         <field name="work_email"/>
                                         <field name="resource_calendar_id"/>
                                         <field name="department_id"/>
@@ -187,4 +188,13 @@
                    -->
     <!-- Full id location: action="openacademy.course_list_action"
              It is not required when it is the same module -->
+
+    <!-- Add menu item to the website header -->
+    <record id="odoo_meetings_page_link" model="website.menu">
+        <field name="name">Reuniones</field>
+        <field name="url">/odoo-meetings/</field>
+        <field name="parent_id" ref="website.main_menu" />
+        <field name="sequence" type="int">99</field>
+    </record>
+
 </odoo>
