--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -79,9 +79,15 @@
                     <t t-foreach="meetingTypes" t-as="meetingType">
                       <p t-if="meetingType_first" class="d-block">
                         <t t-esc="meetingType.description"/>
+                        <a t-attf-href="/odoo-meetings/#{meetingType.id}" class="btn btn-primary">
+                          Book Detail
+                        </a>
                       </p>
                       <p t-else="meetingType_first" class="d-none">
                         <t t-esc="meetingType.description"/>
+                        <a t-attf-href="/odoo-meetings/#{meetingType.id}" class="btn btn-primary">
+                          Book Detail
+                        </a>
                       </p>
                     </t>
                   </div>
@@ -89,7 +95,7 @@
 
                 </div>
 
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                   <div class="form-group">
                     <label for="date" class="control-label">Fecha</label>
                     <input type="date" name="date" min="2018-01-01" max="2018-12-31" required="required" class="form-control o_website_form_date" />
@@ -109,9 +115,11 @@
                   <div class="form-group">
                     <label for="comments" class="control-label">Comentarios</label>
                     <input type="textarea" name="comments" required="required"/>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Enviar</button>
-                </div>
+                  </div> -->
+
+
+                <!-- <button type="submit" class="btn btn-primary">Enviar</button> -->
+                <!-- </div> -->
               </div>
             </form>
 
@@ -138,19 +146,19 @@
         <t t-set="title">Odoo Meetings</t>
         <div class="oe_structure">
           <div class="container py-4">
-            <h2>Programar una reunión</h2>
+            <h2>Seleccionar fecha y hora</h2>
 
             <form action="/odoo-meetings/meeting-type/submit">
               <div class="row">
                 <div class="col-lg-6">
                   <p>Selecciona un tipo de reuniónn:</p>
-                  <select name="meetingTypeSelect" class="form-control">
+                  <!-- <select name="meetingTypeSelect" class="form-control">
                     <t t-foreach="meetingTypes" t-as="meetingType">
                       <option>
                         <t t-esc="meetingType.name"/>
                       </option>
                     </t>
-                  </select>
+                  </select> -->
                 </div>
               </div>
             </form>
