--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -10,6 +10,7 @@
       <xpath expr="." position="inside">
         <link rel="stylesheet" href="/odoo_meetings/static/src/css/style.css"/>
         <script src="/odoo_meetings/static/src/js/show_description.js" type="text/javascript" />
+        <script src="/odoo_meetings/static/src/js/update_time.js" type="text/javascript" />
       </xpath>
     </template>
 
@@ -186,27 +187,71 @@
                 </div>
               </div> -->
 
-              <p>Selecciona la fecha y hora que prefieras para el tipo de reunión "<t t-esc="meetingType.name"/>"</p>
-
-
+              <p>Selecciona la fecha y hora que prefieras para el tipo de reunión "<t t-esc="meetingType.name"/>
+"</p>
               <div class="row">
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label for="date" class="control-label">Fecha</label>
-                    <input type="date" name="date" t-attf-min="#{meetingType.start_date}" t-attf-max="#{meetingType.end_date}" required="required" class="form-control o_website_form_date" />
+                    <input type="date" name="date" t-attf-min="#{meetingType.start_date}" t-attf-max="#{meetingType.end_date}" required="required" class="form-control o_website_form_date" onchange="update_time(this)" />
                   </div>
                 </div>
                 <div class="col-lg-6">
-                  <label for="timeSelect" class="control-label">Hora</label>
-                  <select name="timeSelect" class="form-control" id="timeSelect" onchange="show_time(this)">
-                    <t t-foreach="monday" t-as="hours">
-                      <t t-foreach="hours" t-as="hour">
-                        <option>
-                          <t t-esc="hour"/>
-                        </option>
+                  <div id="time-select-container" class="d-none">
+                    <label for="time-select" class="control-label" id="time-select-label">Hora</label>
+                    <select name="time-select" class="form-control" id="time-select">
+                      <option value="" selected="selected" disabled="true" hidden="true">Elige una hora</option>
+                      <t t-foreach="monday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="monday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
                       </t>
-                    </t>
-                  </select>
+                      <t t-foreach="tuesday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="tuesday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
+                      </t>
+                      <t t-foreach="wednesday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="wednesday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
+                      </t>
+                      <t t-foreach="thursday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="thursday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
+                      </t>
+                      <t t-foreach="friday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="friday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
+                      </t>
+                      <t t-foreach="saturday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="saturday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
+                      </t>
+                      <t t-foreach="sunday" t-as="hours">
+                        <t t-foreach="hours" t-as="hour">
+                          <option data-day="sunday" t-attf-class="d-none">
+                            <t t-esc="hour"/>
+                          </option>
+                        </t>
+                      </t>
+                    </select>
+                  </div>
                 </div>
               </div>
             </form>
