--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -56,7 +56,7 @@
           <div class="container py-4">
             <h2>Programar una reunión</h2>
 
-            <form action="/odoo-meetings/submit">
+            <form>
 
 
               <div class="row">
@@ -149,7 +149,7 @@
           <div class="container py-4">
             <h2>Seleccionar fecha y hora</h2>
 
-            <form action="/odoo-meetings/meeting-type/submit">
+            <form action="/odoo-meetings/submit">
               <!-- <div class="row">
                 <div class="col-lg-12">
                   <p>Selecciona la fecha y hora que prefieras para el tipo de reunión "<t t-esc="meetingType.name"/>"</p>
@@ -199,8 +199,8 @@
                 <div class="col-lg-6">
                   <div id="time-select-container" class="d-none">
                     <label for="time-select" class="control-label" id="time-select-label">Hora</label>
-                    <select name="time-select" class="form-control" id="time-select">
-                      <option value="" selected="selected" disabled="true" hidden="true">Elige una hora</option>
+                    <select name="time-select" class="form-control" id="time-select" required="required">
+                      <option value="" disabled="true" hidden="true">Elige una hora</option>
                       <t t-foreach="monday" t-as="hours">
                         <t t-foreach="hours" t-as="hour">
                           <option data-day="monday" t-attf-class="d-none">
@@ -254,26 +254,45 @@
                   </div>
                 </div>
               </div>
-            </form>
-          </div>
-        </div>
-      </t>
-    </template>
 
+              <h2>Introduce tus datos</h2>
+              <p>Introduce tus datos personales y confirma la reunión. ¡Te enviaremos un correo electrónico de confirmación!</p>
+              <div class="row">
+                <div class="col">
+                  <label for="name" class="control-label">Nombre *</label>
+                  <input type="text" name="name" class="form-control" required="required"/>
 
-    <template id="form_success" name="Form Successfully Submitted">
-      <t t-call="website.layout">
-        <div id="wrap">
-          <div class="container">
-            <div class="col-md-12">
-              <div class="alert alert-success">
-                            Customer created successfully.
+                </div>
+                <div class="col">
+                  <label for="email" class="control-label">Email *</label>
+                  <input type="email" name="email" class="form-control" required="required"/>
+                </div>
               </div>
-            </div>
+              <div class="form-group pt-2">
+                <label for="comments" class="control-label">Comentarios</label>
+                <textarea name="comments" class="form-control" rows="3"/>
+              </div>
+              <button type="submit" class="btn btn-primary">Confirmar reunión</button>
+        </form>
+      </div>
+    </div>
+  </t>
+</template>
+
+
+<template id="form_success" name="Form Successfully Submitted">
+  <t t-call="website.layout">
+    <div id="wrap">
+      <div class="container">
+        <div class="col-md-12">
+          <div class="alert alert-success">
+                            Customer created successfully.
           </div>
         </div>
-      </t>
-    </template>
+      </div>
+    </div>
+  </t>
+</template>
 
-  </data>
+</data>
 </odoo>
