Save meeting event to DB

--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -272,6 +272,7 @@
                 <label for="comments" class="control-label">Comentarios</label>
                 <textarea name="comments" class="form-control" rows="3"/>
               </div>
+              <input type="hidden" name="meetingTypeId" t-att-value="meetingTypeId"/>
               <button type="submit" class="btn btn-primary">Confirmar reunión</button>
         </form>
       </div>
