Check if employee has another event in their Odoo calendar in tthe time selected by user

--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -295,5 +295,19 @@
   </t>
 </template>
 
+<template id="form_failure" name="Form Error">
+  <t t-call="website.layout">
+    <div id="wrap">
+      <div class="container">
+        <div class="col-md-12">
+          <div class="alert alert-danger">
+              Oops, no hay nadie disponible. Prueba otra hora
+          </div>
+        </div>
+      </div>
+    </div>
+  </t>
+</template>
+
 </data>
 </odoo>
