--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -336,10 +336,9 @@
     <div id="wrap">
       <div class="container py-4">
         <div class="col-md-12">
-          <h2><t t-esc="meeting_type_name"/></h2>
-          <h5><t t-esc="address"/></h5>
-          <p>¡Hola <t t-esc="assistant_name"/>! Tenías una reunión con <t t-esc="employee_name"/> el <t t-esc="date"/> a las <t t-esc="hour"/>. Si quieres cancelar la reunión programada, haz clic en el siguiente botón.</p>
-          
+          <h2>Reunión de <t t-esc="assistant_name"/> con <t t-esc="employee_name"/></h2>
+          <h5><t t-esc="meeting_type_name"/> | <t t-esc="address"/></h5>
+          <p>¡Hola! Tenías una reunión programada para el <t t-esc="date"/> a las <t t-esc="hour"/>. Si quieres cancelarla, haz clic en el siguiente botón.</p>
           <a t-attf-href="/odoo-meetings/event/#{event_id}/delete" class="btn btn-primary mb-5">              Cancelar reunión
           </a>
         </div>
