--- a/local-addons/odoo_meetings/views/templates.xml
+++ b/local-addons/odoo_meetings/views/templates.xml
@@ -310,6 +310,8 @@
           <div class="alert alert-success">
             La reunión programada se ha cancelado con éxito. Recibirás un correo electrónico con la cancelación de la reunión.
           </div>
+          <p>Si quieres programar otra reunión, haz clic en el siguiente botón.</p>
+          <a t-attf-href="/odoo-meetings/" class="btn btn-primary mb-5">Programar otra reunión</a>
         </div>
       </div>
     </div>
@@ -338,8 +340,8 @@
         <div class="col-md-12">
           <h2>Reunión de <t t-esc="assistant_name"/> con <t t-esc="employee_name"/></h2>
           <h5><t t-esc="meeting_type_name"/> | <t t-esc="address"/></h5>
-          <p>¡Hola! Tenías una reunión programada para el <t t-esc="date"/> a las <t t-esc="hour"/>. Si quieres cancelarla, haz clic en el siguiente botón.</p>
-          <a t-attf-href="/odoo-meetings/event/#{event_id}/delete" class="btn btn-primary mb-5">              Cancelar reunión
+          <p>¡Hola! Tenías una reunión programada para el <t t-esc="date"/> a las <t t-esc="hour"/>. Si quieres cancelarla o modificarla, haz clic en el siguiente botón. Siempre que quieras cancelar o modificar una reunión, se tendrá que cancelar la anterior y programar una nueva.</p>
+          <a t-attf-href="/odoo-meetings/event/#{event_id}?action=update" class="btn btn-primary mb-5">              Cancelar/modificar reunión
           </a>
         </div>
       </div>
